--- a/Resume.tex
+++ b/Resume.tex
@@ -29,7 +29,7 @@
 
 \section{Education}
 
-\cventry{2016 - Present
+\cventry{2016 - present
 Class of 2020
 }
 {Franklin W. Olin College of Engineering}{}{Needham, MA}{}
