--- a/Resume.tex
+++ b/Resume.tex
@@ -91,6 +91,20 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 \vspace{0.05 in}
 \section{Projects}
 
+\cventry{Spring 2017}
+{Super Tic-Tac-Toe}
+{Olin College}
+{}
+{}
+{Worked with partner to create a multiplayer tic-tac-toe game. Using Socket.io and PyGame, players were able to connect to a server and play. Created our own system to package, send, and recive game data.}
+
+\cventry{Spring 2017}
+{TwitterFeels}
+{Olin College}
+{}
+{}
+{Created a Twitter bot to analyze the sentiment of users. Used the Twitter API and VADER Sentiment analysis to visualize the emotions portrayed.}
+
 \cventry{Fall 2016}
 {Wanderer}
 {MIT Media Lab Reality Virtually AR/VR Hackathon}
@@ -116,8 +130,9 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 
 \cvline{}
 {
-Java,
 Python,
+Java,
+Flask,
 HTML,
 MatLab,
 Altium Designer,
