EDIT: Edited resume

--- a/Resume.tex
+++ b/Resume.tex
@@ -91,6 +91,13 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 \vspace{0.05 in}
 \section{Projects}
 
+\cventry{Fall 2016 -Present}
+{SLAC (Stay Late and Create)}
+{Olin College}
+{}
+{}
+{Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Worked to promote the club by creating a branded Facebook page, Instagram, and weekly email newsletter in HTML. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
+
 \cventry{Spring 2017}
 {Super Tic-Tac-Toe}
 {Olin College}
@@ -105,13 +112,6 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 {}
 {Created a Twitter bot to analyze the sentiment of users. Used the Twitter API and VADER Sentiment analysis to visualize the emotions portrayed.}
 
-\cventry{Fall 2016}
-{Wanderer}
-{MIT Media Lab Reality Virtually AR/VR Hackathon}
-{}
-{}
-{Worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience in Javascript, C\#, or Unity and created a bubbler feature using the newly release Good Daydream API to utilize the wand. More information can be found at \href{https://devpost.com/software/wanderers}{devpost.com/software/wanderers}}
-
 \cventry{Fall 2016 -Present}
 {Formula SAE}
 {Olin College}
@@ -119,12 +119,12 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 {}
 {Working to design and build the car's dashboard module which displays important driver data through the use of micro controllers. Interfaces with the data logging system to record useful driver data. Designed custom PCBs in Altium Designer then proceeded to place components and program the boards using C.}
 
-\cventry{Fall 2016 -Present}
-{SLAC (Stay Late and Create)}
-{Olin College}
+\cventry{Fall 2016}
+{Wanderer}
+{MIT Media Lab Reality Virtually AR/VR Hackathon}
 {}
 {}
-{Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding Wednesday night meetings with snacks, student-led workshops, and corporate-led workshops. Worked to promote the club by creating a branded Facebook page, Instagram, and weekly email newsletter in HTML. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food. Work closely with corporate sponsors to gather funding and organize exciting  workshops for students.}
+{Worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience in Javascript, C\#, or Unity and created a bubbler feature using the newly release Good Daydream API to utilize the wand. More information can be found at \href{https://devpost.com/software/wanderers}{devpost.com/software/wanderers}}
 
 \section{Skills}
 
@@ -147,7 +147,7 @@ ProTools,
 \LaTeX{},
 laser cutter,
 mill,
-lathe.
+ShopBot.
 }
 \cvline{}
 {Other: French language fluency \& conversational Swedish}
