Updated resume and homepage to reflect new projects. Small additional changes to Barbot page.

--- a/Resume.tex
+++ b/Resume.tex
@@ -1,4 +1,4 @@
-\documentclass[11.5pt]{moderncv}
+\documentclass[11 pt]{moderncv}
 
 \usepackage{setspace}
 \usepackage{amssymb}
@@ -25,23 +25,22 @@
 \begin{document}
 \maketitle
 
-\vspace{-.3in}
+\vspace{-.6in}
 
 \section{Education}
 
 \cventry{2016 - Present
 Class of 2020
+GPA: 3.91
 }
 {Franklin W. Olin College of Engineering}{}{Needham, MA}{}
 {
 	\textbf{Candidate for BSE in Computer Engineering.}
 	  Coursework includes:
-    Modeling and Simulation of The Real World;
-    Design Nature;
+    Modeling and Simulation of The World;
     Introduction to Sensors, Instrumentation, and Measurement;
-    Software Design*;
-    Qualitative Engineering Analysis*
-       (*denotes currently enrolled)
+    Software Design;
+    Qualitative Engineering Analysis
 	\newline
 	\textit{Recipient of 4-year, 50\% Olin Merit Scholarship.}
 }
@@ -57,7 +56,15 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 }
 
 \section{Experience}
-\vspace{0.05 in}
+\vspace{0.06 in}
+
+\cventry{May 2017-
+Present}
+{Software Engineer Intern}
+{Voss Technologies - Chalmers University}
+{Gothenburg, Sweden}
+{}
+{Working with professor of formal verification to build a schematic drawing system in C. Using an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool.}
 
 \cventry{2014-Present}
 {Sound Engineer}
@@ -74,13 +81,6 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 {Work freelance with focuses in portrait, landscape, and sports photography. Grew business to a profitable level.
  Published in editorial articles in The Oregonian covering a Fun Run. Portfolio at \href{www.petersegerphotography.com}{petersegerphotography.com}}
 
-\cventry{Summer 2014-2016}
-{Head Counselor}
-{Trollbacken Swedish Language and Culture Camp}
-{Portland, OR}
-{}
-{Responsible for cabin of 10 boys aged 7-13. Head counselor responsibilities included leading activities and organizing staff. Worked alongside teaching staff to ensure the week went off without a hitch.}
-
 \cventry{September 2016-Present}
 {Library Assistant}
 {Olin College of Engineering}
@@ -88,29 +88,22 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 {}
 {Work to install and maintain new shelving system including new database. Worked to design and manufacture a facade for the student run coffee shop on campus.}
 
-\vspace{0.05 in}
+\vspace{0.03 in}
 \section{Projects}
+
+\cventry{Spring 2017}
+{Barbot}
+{Olin College}
+{}
+{}
+{Project manager and system architect for a Python Flask webapp for automated parties. Built a full stack webapp with MySQL database, Bootstrap front end, and Flask app development. Worked to layout the system and describe all functionality and worked with three other team members with varying levels of experience to ensure everyone had impact. }
 
 \cventry{Fall 2016 -Present}
 {SLAC (Stay Late and Create)}
 {Olin College}
 {}
 {}
-{Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Worked to promote the club by creating a branded Facebook page, Instagram, and weekly email newsletter in HTML. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
-
-\cventry{Spring 2017}
-{Super Tic-Tac-Toe}
-{Olin College}
-{}
-{}
-{Worked with partner to create a multiplayer tic-tac-toe game. Using Socket.io and PyGame, players were able to connect to a server and play. Created our own system to package, send, and recive game data.}
-
-\cventry{Spring 2017}
-{TwitterFeels}
-{Olin College}
-{}
-{}
-{Created a Twitter bot to analyze the sentiment of users. Used the Twitter API and VADER Sentiment analysis to visualize the emotions portrayed.}
+{Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
 
 \cventry{Fall 2016 -Present}
 {Formula SAE}
@@ -119,35 +112,41 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 {}
 {Working to design and build the car's dashboard module which displays important driver data through the use of micro controllers. Interfaces with the data logging system to record useful driver data. Designed custom PCBs in Altium Designer then proceeded to place components and program the boards using C.}
 
+\cventry{Spring 2017}
+{Super Tic-Tac-Toe}
+{Olin College}
+{}
+{}
+{Worked with partner to create a multiplayer tic-tac-toe game. Using Socket.io and PyGame, players were able to connect to a server and play. Created our own system to package, send, and recive game data.}
+
 \cventry{Fall 2016}
 {Wanderer}
 {MIT Media Lab Reality Virtually AR/VR Hackathon}
 {}
 {}
-{Worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience in Javascript, C\#, or Unity and created a bubbler feature using the newly release Good Daydream API to utilize the wand. More information can be found at \href{https://devpost.com/software/wanderers}{devpost.com/software/wanderers}}
+{Worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience in Javascript, C\#, or Unity and created a bubbler feature using the newly release Google Daydream API to utilize the wand. More information can be found at \href{https://devpost.com/software/wanderers}{devpost.com/software/wanderers}}
 
 \section{Skills}
 
 \cvline{}
 {
+C,
 Python,
 Java,
 Flask,
+MySQL,
 HTML,
 MatLab,
 Altium Designer,
 Solidworks,
-3dsMax
+3dsMax,
 Unity Engine,
 Adobe Creative Suite,
-Lightroom,
 Microsoft Suite,
-Apple Logic,
-ProTools,
 \LaTeX{},
 laser cutter,
 mill,
-ShopBot.
+ShopBot CNC Router.
 }
 \cvline{}
 {Other: French language fluency \& conversational Swedish}
