Updates for 2017 school year

--- a/Resume.tex
+++ b/Resume.tex
@@ -59,12 +59,19 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 \vspace{0.06 in}
 
 \cventry{May 2017-
-Present}
+August 2017}
 {Software Engineer Intern}
 {Voss Technologies - Chalmers University}
 {Gothenburg, Sweden}
 {}
-{Working with professor of formal verification to build a schematic drawing system in C. Using an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool.}
+{Worked with professor of formal verification to build a schematic drawing system in C. Using an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool.}
+
+\cventry{Fall 2016 -Present}
+{Firmware Lead - Formula SAE}
+{Olin College}
+{}
+{}
+{In charge of defining the software for the entire car. Designing, laying out, and implementing a custom API to ensure other student team members build software that is safe, stable, and efficient for the car. Previous work on the team includes designing custom PCBs for dashboard module and writing software for them.}
 
 \cventry{2014-Present}
 {Sound Engineer}
@@ -81,7 +88,7 @@ Present}
 {Work freelance with focuses in portrait, landscape, and sports photography. Grew business to a profitable level.
  Published in editorial articles in The Oregonian covering a Fun Run. Portfolio at \href{www.petersegerphotography.com}{petersegerphotography.com}}
 
-\cventry{September 2016-Present}
+\cventry{September 2016-2017}
 {Library Assistant}
 {Olin College of Engineering}
 {Needham, MA}
@@ -104,13 +111,6 @@ Present}
 {}
 {}
 {Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
-
-\cventry{Fall 2016 -Present}
-{Formula SAE}
-{Olin College}
-{}
-{}
-{Working to design and build the car's dashboard module which displays important driver data through the use of micro controllers. Interfaces with the data logging system to record useful driver data. Designed custom PCBs in Altium Designer then proceeded to place components and program the boards using C.}
 
 \cventry{Spring 2017}
 {Super Tic-Tac-Toe}
