--- a/Resume.tex
+++ b/Resume.tex
@@ -64,7 +64,7 @@ August 2017}
 {Voss Technologies - Chalmers University}
 {Gothenburg, Sweden}
 {}
-{Worked with professor of formal verification to build a schematic drawing system in C. Using an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool.}
+{Worked with professor building a design system for autonomous vehicles. My focus was to build a schematic visualization system in C. Used an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool. Used advanced data structures and heuristics to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.}
 
 \cventry{Fall 2016 -Present}
 {Firmware Lead - Formula SAE}
@@ -112,12 +112,6 @@ August 2017}
 {}
 {Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
 
-\cventry{Spring 2017}
-{Super Tic-Tac-Toe}
-{Olin College}
-{}
-{}
-{Worked with partner to create a multiplayer tic-tac-toe game. Using Socket.io and PyGame, players were able to connect to a server and play. Created our own system to package, send, and recive game data.}
 
 \cventry{Fall 2016}
 {Wanderer}
