--- a/Resume.tex
+++ b/Resume.tex
@@ -35,7 +35,7 @@ GPA: 3.91
 }
 {Franklin W. Olin College of Engineering}{}{Needham, MA}{}
 {
-	\textbf{Candidate for BSE in Computer Engineering.}
+	\textbf{Candidate for BS in Engineering: Concentration in Computer Engineering.}
 	  Coursework includes:
     Modeling and Simulation of The World;
     Introduction to Sensors, Instrumentation, and Measurement;
@@ -66,12 +66,26 @@ August 2017}
 {}
 {Worked with professor building a design system for autonomous vehicles. My focus was to build a schematic visualization system in C. Used an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool. Used advanced data structures and heuristics to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.}
 
+\cventry{Spring 2017}
+{Barbot}
+{Olin College}
+{}
+{}
+{Project manager and system architect for a Python Flask webapp for automated parties. Built a full stack webapp with MySQL database, Bootstrap front end, and Flask app development. Worked to layout the system and describe all functionality and worked with three other team members with varying levels of experience to ensure everyone had impact. }
+
 \cventry{Fall 2016 -Present}
 {Firmware Lead - Formula SAE}
 {Olin College}
 {}
 {}
 {In charge of defining the software for the entire car. Designing, laying out, and implementing a custom API to ensure other student team members build software that is safe, stable, and efficient for the car. Previous work on the team includes designing custom PCBs for dashboard module and writing software for them.}
+
+\cventry{Fall 2016 -Present}
+{SLAC (Stay Late and Create)}
+{Olin College}
+{}
+{}
+{Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
 
 \cventry{2014-Present}
 {Sound Engineer}
@@ -88,29 +102,16 @@ August 2017}
 {Work freelance with focuses in portrait, landscape, and sports photography. Grew business to a profitable level.
  Published in editorial articles in The Oregonian covering a Fun Run. Portfolio at \href{www.petersegerphotography.com}{petersegerphotography.com}}
 
+
+\vspace{0.03 in}
+\section{Projects \& Other Activities}
+
 \cventry{September 2016-2017}
 {Library Assistant}
 {Olin College of Engineering}
 {Needham, MA}
 {}
-{Work to install and maintain new shelving system including new database. Worked to design and manufacture a facade for the student run coffee shop on campus.}
-
-\vspace{0.03 in}
-\section{Projects}
-
-\cventry{Spring 2017}
-{Barbot}
-{Olin College}
-{}
-{}
-{Project manager and system architect for a Python Flask webapp for automated parties. Built a full stack webapp with MySQL database, Bootstrap front end, and Flask app development. Worked to layout the system and describe all functionality and worked with three other team members with varying levels of experience to ensure everyone had impact. }
-
-\cventry{Fall 2016 -Present}
-{SLAC (Stay Late and Create)}
-{Olin College}
-{}
-{}
-{Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
+{Worked to design and manufacture a facade for the student run coffee shop on campus. Worked to install and maintain new shelving system including new database. }
 
 
 \cventry{Fall 2016}
