--- a/Resume.tex
+++ b/Resume.tex
@@ -78,7 +78,7 @@ August 2017}
 {Olin College}
 {}
 {}
-{In charge of defining the software for the entire car. Designing, laying out, and implementing a custom API to ensure other student team members build software that is safe, stable, and efficient for the car. Previous work on the team includes designing custom PCBs for dashboard module and writing software for them.}
+{In charge of defining the software for the entire car. Designing, laying out, and implementing a custom API in C to ensure other student team members build software that is safe, stable, and efficient for the car. Also in charge of teaching all new members firmware skills such as Git, C, and AVR programming.}
 
 \cventry{Fall 2016 -Present}
 {SLAC (Stay Late and Create)}
@@ -127,17 +127,13 @@ August 2017}
 {
 C,
 Python,
+Arduino,
 Java,
 Flask,
 MySQL,
 HTML,
 MatLab,
 Altium Designer,
-Solidworks,
-3dsMax,
-Unity Engine,
-Adobe Creative Suite,
-Microsoft Suite,
 \LaTeX{},
 laser cutter,
 mill,
