--- a/Resume.tex
+++ b/Resume.tex
@@ -64,43 +64,75 @@ August 2017}
 {Voss Technologies - Chalmers University}
 {Gothenburg, Sweden}
 {}
-{Worked with professor building a design system for autonomous vehicles. My focus was to build a schematic visualization system in C. Used an existing API in Functional Language (FL) to recreate functionality in C to increase speed, accuracy, and dependability of the tool. Used advanced data structures and heuristics to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.}
+{
+\begin{itemize}
+	\item Worked with professor building a design system for autonomous vehicles building a schematic visualization system in \textbf{C}. 
+	\item Used an existing API in Functional Language (FL) to recreate functionality in \textbf{C} to increase speed, accuracy, and dependability of the tool. 
+	\item Used advanced \textbf{data structures and heuristics} to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.
+\end{itemize}
+}
+
 
 \cventry{Spring 2017}
-{Barbot}
+{Barbot -  Project Manager}
 {Olin College}
 {}
 {}
-{Project manager and system architect for a Python Flask webapp for automated parties. Built a full stack webapp with MySQL database, Bootstrap front end, and Flask app development. Worked to layout the system and describe all functionality and worked with three other team members with varying levels of experience to ensure everyone had impact. }
+{
+\begin{itemize}
+	\item Project manager and system architect for a \textbf{Python} Flask webapp for automated parties. 
+	\item Built a full stack webapp with \textbf{MySQL} database, \textbf{Bootstrap} front end, and \textbf{Flask} app development. 
+	\item Worked to layout the system and describe all functionality and worked with three other team members with varying levels of experience to ensure everyone had impact. 
+\end{itemize}
+}
 
 \cventry{Fall 2016 -Present}
 {Firmware Lead - Formula SAE}
 {Olin College}
 {}
 {}
-{In charge of defining the software for the entire car. Designing, laying out, and implementing a custom API in C to ensure other student team members build software that is safe, stable, and efficient for the car. Also in charge of teaching all new members firmware skills such as Git, C, and AVR programming.}
+{
+\begin{itemize}
+	\item Designing, laying out, and implementing a custom API in \textbf{C} to ensure other student team members build software that is safe, stable, and efficient for the car. 
+	\item Also in charge of teaching all new members firmware skills such as Git, C, and AVR programming.
+\end{itemize}
+}
 
 \cventry{Fall 2016 -Present}
 {SLAC (Stay Late and Create)}
 {Olin College}
 {}
 {}
-{Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. Work with the leadership team to organize SLACfest, a festival of creativity during the spring semester which features an entire day of workshops, activities, and food.}
+{
+\begin{itemize}
+	\item Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. 
+	\item Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. 
+\end{itemize}
+}
 
 \cventry{2014-Present}
 {Sound Engineer}
 {Freelance}
 {Portland, OR}
 {}
-{Self taught in the practice of live sound engineering including choosing equipment, setting it up, and running advanced shows. Engineered at music festivals, theatrical productions, and musicals including troubleshooting and organizing sound arrays. Installed fulls sound systems including equipment, software, and training. Worked as sound designer for the stage production of Dead Man's Cell Phone at Babson College. (Fall 2016)}
+{
+\begin{itemize}
+	\item Self taught in the practice of live sound engineering including choosing equipment, setting it up, and running advanced shows. Engineered at music festivals, theatrical productions, and musicals including troubleshooting and organizing sound arrays. 
+	\item Installed fulls sound systems including equipment, software, and training.
+\end{itemize}
+}
 
 \cventry{2014-Present }
 {Photographer}
 {Peter Seger Photography}
 {Portland, OR}
 {}
-{Work freelance with focuses in portrait, landscape, and sports photography. Grew business to a profitable level.
- Published in editorial articles in The Oregonian covering a Fun Run. Portfolio at \href{www.petersegerphotography.com}{petersegerphotography.com}}
+{
+\begin{itemize}
+	\item Work freelance with focuses in portrait, landscape, and sports photography. Grew business to a profitable level.
+	\item Published in editorial articles in The Oregonian covering a Fun Run. Portfolio at \href{www.petersegerphotography.com}{petersegerphotography.com}
+\end{itemize}
+}
 
 
 \vspace{0.03 in}
@@ -111,7 +143,11 @@ August 2017}
 {Olin College of Engineering}
 {Needham, MA}
 {}
-{Worked to design and manufacture a facade for the student run coffee shop on campus. Worked to install and maintain new shelving system including new database. }
+{
+\begin{itemize}
+	\item Worked to design and manufacture a facade for the student run coffee shop on campus.
+\end{itemize}
+ }
 
 
 \cventry{Fall 2016}
@@ -119,19 +155,23 @@ August 2017}
 {MIT Media Lab Reality Virtually AR/VR Hackathon}
 {}
 {}
-{Worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience in Javascript, C\#, or Unity and created a bubbler feature using the newly release Google Daydream API to utilize the wand. More information can be found at \href{https://devpost.com/software/wanderers}{devpost.com/software/wanderers}}
+{
+\begin{itemize}
+	\item Worked in a team of five to create a VR experience for people with anxiety. Went in with no previous experience in Javascript, C\#, or Unity and created a bubbler feature using the newly release Google Daydream API to utilize the wand. More information can be found at \href{https://devpost.com/software/wanderers}{devpost.com/software/wanderers}
+\end{itemize}
+}
 
 \section{Skills}
 
 \cvline{}
 {
-C,
-Python,
-Arduino,
-Java,
+\textbf{C},
+\textbf{Python},
+\textbf{Arduino},
+\textbf{Java},
 Flask,
 MySQL,
-HTML,
+\textbf{HTML},
 MatLab,
 Altium Designer,
 \LaTeX{},
