--- a/Resume.tex
+++ b/Resume.tex
@@ -66,7 +66,7 @@ August 2017}
 {}
 {
 \begin{itemize}
-	\item Worked with professor building a design system for autonomous vehicles building a schematic visualization system in \textbf{C}. 
+	\item Worked in Sweden with professor building a design system for autonomous vehicles by building a schematic visualization system in \textbf{C}. 
 	\item Used an existing API in Functional Language (FL) to recreate functionality in \textbf{C} to increase speed, accuracy, and dependability of the tool. 
 	\item Used advanced \textbf{data structures and heuristics} to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.
 \end{itemize}
@@ -105,7 +105,7 @@ August 2017}
 {}
 {
 \begin{itemize}
-	\item Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with snacks, student-led workshops, and corporate-led workshops. 
+	\item Part of the leadership team for the club which promotes a collaborative work space to foster Olin's project based learning by holding weekly meetings with student-led workshops, corporate-led workshops, and snacks. 
 	\item Work closely with corporate sponsors including Google, GE, Microsoft and others to secure funding for activities. 
 \end{itemize}
 }
