--- a/Resume.tex
+++ b/Resume.tex
@@ -25,22 +25,16 @@
 \begin{document}
 \maketitle
 
-\vspace{-.6in}
+\vspace{-.2in}
 
 \section{Education}
 
-\cventry{2016 - Present
-Class of 2020
+\cventry{Class of 2020
 GPA: 3.91
 }
 {Franklin W. Olin College of Engineering}{}{Needham, MA}{}
 {
 	\textbf{Candidate for BS in Engineering: Concentration in Computer Engineering.}
-	  Coursework includes:
-    Modeling and Simulation of The World;
-    Introduction to Sensors, Instrumentation, and Measurement;
-    Software Design;
-    Qualitative Engineering Analysis
 	\newline
 	\textit{Recipient of 4-year, 50\% Olin Merit Scholarship.}
 }
@@ -56,7 +50,7 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 }
 
 \section{Experience}
-\vspace{0.06 in}
+\vspace{0.1 in}
 
 \cventry{May 2017-
 August 2017}
@@ -66,8 +60,8 @@ August 2017}
 {}
 {
 \begin{itemize}
-	\item Worked in Sweden with professor building a design system for autonomous vehicles by building a schematic visualization system in \textbf{C}. 
-	\item Used an existing API in Functional Language (FL) to recreate functionality in \textbf{C} to increase speed, accuracy, and dependability of the tool. 
+	\item Worked in Sweden with professor building a design system for autonomous vehicles.
+	\item Built a schematic visualization tool from an existing API to recreate functionality in \textbf{C} to increase speed, accuracy, and dependability. 
 	\item Used advanced \textbf{data structures and heuristics} to create informative and accurate schematics from Register Transfer Language (RTL) descriptions.
 \end{itemize}
 }
@@ -135,8 +129,9 @@ August 2017}
 }
 
 
-\vspace{0.03 in}
+\vspace{0.08 in}
 \section{Projects \& Other Activities}
+\vspace{0.1 in}
 
 \cventry{September 2016-2017}
 {Library Assistant}
