Added Uber summer and used new resume template

--- a/Resume.tex
+++ b/Resume.tex
@@ -30,7 +30,7 @@
 \section{Education}
 
 \cventry{Class of 2020
-GPA: 3.91
+GPA: 3.73
 }
 {Franklin W. Olin College of Engineering}{}{Needham, MA}{}
 {
@@ -51,6 +51,19 @@ GPA: 3.82}{Valley Catholic High School}{}{Beaverton, OR}{}
 
 \section{Experience}
 \vspace{0.1 in}
+
+\cventry{May 2018-
+August 2018}
+{Software Engineer Intern}
+{Uber Technologies}
+{San Francisco}
+{}
+{
+Worked on the Customer Obsessions Answer Discovery team where I architected and implemented a new service for ingesting \textbf{Kafka} messages used for providing 
+intelligent ranking of help articles. Worked on web services in \textbf{Javascript} and created a new backend service in \textbf{Go} that ingests ~100k messages 
+per hour. Project was used as a proof of concept for a larger initiative in providing intelligent help experiences and this architecture is now being 
+implemented for Mobile side help as well.
+}
 
 \cventry{May 2017-
 August 2017}
@@ -104,6 +117,7 @@ August 2017}
 \end{itemize}
 }
 
+\iffalse
 \cventry{2014-Present}
 {Sound Engineer}
 {Freelance}
@@ -115,6 +129,7 @@ August 2017}
 	\item Installed fulls sound systems including equipment, software, and training.
 \end{itemize}
 }
+\fi
 
 \cventry{2014-Present }
 {Photographer}
@@ -129,20 +144,10 @@ August 2017}
 }
 
 
+
 \vspace{0.08 in}
 \section{Projects \& Other Activities}
 \vspace{0.1 in}
-
-\cventry{September 2016-2017}
-{Library Assistant}
-{Olin College of Engineering}
-{Needham, MA}
-{}
-{
-\begin{itemize}
-	\item Worked to design and manufacture a facade for the student run coffee shop on campus.
-\end{itemize}
- }
 
 
 \cventry{Fall 2016}
@@ -156,25 +161,36 @@ August 2017}
 \end{itemize}
 }
 
-\section{Skills}
+\section{Languages and Frameworks}
 
 \cvline{}
 {
-\textbf{C},
-\textbf{Python},
-\textbf{Arduino},
-\textbf{Java},
-Flask,
-MySQL,
-\textbf{HTML},
-MatLab,
-Altium Designer,
-\LaTeX{},
-laser cutter,
-mill,
-ShopBot CNC Router.
+	Backend: 
+	Javascript (NodeJS),
+	Go,
+	Python,
+	C,
+	Java
 }
+
 \cvline{}
-{Other: French language fluency \& conversational Swedish}
+{
+	Frontend:
+	React,
+	Redux,
+	HTML,
+	CSS
+}
+
+\cvline{}
+{
+	Technologies: 
+	SQL,
+	Hadoop,
+	Kafka,
+	Nginx,
+	ETL Pipelines,
+	Google Cloud Platforrm
+}
 
 \end{document}
