Added PM resume

--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Peter}{Seger}
-\position{Software Engineering{\enskip\cdotp\enskip}Student}
+\position{Software Engineering / Project Manager {\enskip\cdotp\enskip}Student}
 \address{Boston, MA \& Gothenburg, Sweden}
 
 \mobile{(503) 544-6599}
@@ -93,8 +93,8 @@
 \input{resume/experience.tex}
 %\input{resume/honors.tex}
 \input{resume/projects.tex}
+% \input{resume/leadership.tex}
 \input{resume/skills.tex}
-%\input{resume/writing.tex}
 %\input{resume/committees.tex}
 \input{resume/extracurricular.tex}
 
