--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -13,7 +13,7 @@
   \cventry
     {Sofware Engineer Intern (Full-Stack)} % Job title
     {Uber} % Organization
-    {San Francisco} % Location
+    {San Francisco, CA} % Location
     {May 2018 - Aug. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
@@ -48,7 +48,7 @@
     {Sep. 2016 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item Worked on designing, laying out, and implementing a custom API in \textbf{C} to ensure other student team members build software that is safe, stable, and efficient for the car. Also built new AVR buildchain using \textbf{Python}.
+        \item Worked on designing, laying out, and implementing a custom API in \textbf{C} to ensure other student team members built software that is safe, stable, and efficient for the car. Also built new AVR buildchain using \textbf{Python}.
         \item Was in charge of teaching all new members firmware skills such as \textbf{Git}, \textbf{C}, and \textbf{AVR} programming.
         \item Currently in charge of securing ~\$50k in funds for the team through corportate sponsors and public/private grants.
       \end{cvitems}
