--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Full-Stack Engineer} % Role
+    {Project Manager \& Full-Stack Engineer} % Role
     {Strolle} % Project
     {Boston, MA} % Location
     {Apr. 2018} % Date(s)
