--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -31,5 +31,12 @@
 	    ETL Pipelines,
 	    Google Cloud Platforrm
         }
+        % \item{
+        % Tools:
+        % Jira,
+        % Confluence,
+        % Asana,
+        % Trello
+        % }
       \end{cvitems}
 \end{cventries}
