--- a/resume.tex
+++ b/resume.tex
@@ -96,7 +96,7 @@
 % \input{resume/leadership.tex}
 \input{resume/skills.tex}
 %\input{resume/committees.tex}
-\input{resume/extracurricular.tex}
+% \input{resume/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
