--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -23,6 +23,21 @@
       \end{cvitems}
     }
 
+
+%---------------------------------------------------------
+  \cventry
+  {User Oriented Collaborative Design} % Role
+  {EVE - Vitual Nurse Assistant} % Project
+  {Boston, MA} % Location
+  {Spring 2018} % Date(s)
+  {
+    \begin{cvitems} % Description(s)
+      \item Co-Designed with ICU Nurses to identify and attempt to solve a problem in their workplace
+      \item Designed a virtual nurse to facilitate communication with patients' families and nurses
+      \item Completed personas, interaction maps, product designs, and mockups to communicate with our users and stakeholders.
+    \end{cvitems}
+  }
+
 %---------------------------------------------------------
   \cventry
     {Project Manager \& System Architect} % Role
