--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -31,12 +31,18 @@
 	    ETL Pipelines,
 	    Google Cloud Platforrm
         }
-        % \item{
-        % Tools:
-        % Jira,
-        % Confluence,
-        % Asana,
-        % Trello
-        % }
+        \item{
+        Tools:
+        Jira,
+        Confluence,
+        Asana,
+        Trello
+        }
+        \item{
+        Other:
+        User Focused Design,
+        Product Market Fit,
+        Business Management
+        }
       \end{cvitems}
 \end{cventries}
